style: color partly cloudy icon and fix layout breaking bug

--- a/style-v1.6.css
+++ b/style-v1.6.css
@@ -1475,6 +1475,12 @@ select:focus {
   color: #f59e0b;
 }
 
+.weather-icon-partly-cloudy {
+  background: -webkit-linear-gradient(135deg, #f59e0b 45%, #64748b 55%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .weather-icon-cloudy,
 .weather-icon-calm {
   color: #64748b;
